# semestralka-POS

./: CMakeLists.txt  TODO  console.cpp  console.h  download.cpp  download.h  downloadHandler.cpp  downloadHandler.h  fileHandler.cpp  fileHandler.h  files.json  jsonParser.cpp  jsonParser.h  main.cpp
